[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
bytemuck = "1.13.0"
clap = "4.1.6"
console_error_panic_hook = "0.1.6"
js-sys = "0.3.61"
raw-window-handle = "0.5.0"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-wasm = "0.2.1"
uuid = "1.3.0"
web-sys = "0.3.61"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.34"
wgpu = "0.15.1"
dacti-pack = { path = "./crates/dacti-pack" }
dacti-viewer = { path = "./crates/dacti-viewer" }
daicon = { path = "./crates/daicon" }
wrapmuck = { path = "./crates/wrapmuck" }
