[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.69"
bytemuck = "1.13.0"
clap = "4.1.6"
console_error_panic_hook = "0.1.6"
crossbeam = "0.8.2"
daicon = "0.1.0"
js-sys = "0.3.61"
raw-window-handle = "0.5.0"
sharded-slab = "0.1.4"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tracing-wasm = "0.2.1"
uuid = "1.3.0"
web-sys = "0.3.61"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.34"
wgpu = "0.15.1"
wrapmuck = "0.1.0"
dacti-pack = { path = "./crates/dacti-pack" }
dacti-viewer = { path = "./crates/dacti-viewer" }
ptero-pack = { path = "./crates/ptero-pack" }
stewart = { path = "./crates/stewart" }
stewart-native = { path = "./crates/stewart-native" }
stewart-runtime = { path = "./crates/stewart-runtime" }
