[package]
name = "dacti-pack-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dacti-pack"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true, features = ["derive"] }
uuid.workspace = true
daicon.workspace = true
