[package]
name = "omfobj-viewer-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
js-sys = "0.3.61"
raw-window-handle = "0.5.0"
tracing = "0.1.37"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.34"
wgpu.workspace = true
omfobj-viewer = { path = "../omfobj-viewer" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { workspace = true, features = ["webgl"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
    "DomStringMap",
    "HtmlElement",
    "HtmlCanvasElement",
    "Window",
]
